--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rollup-plugin-shell": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "2.3.1",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "zx": "^7.0.0"
   }
 }
