--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "./index.mjs",
   "bin": {
-    "bp": "./index.mjs"
+    "bp": "./src/index.mjs"
   },
   "scripts": {
-    "publish": "npm publish --access public"
+    "start": "cd docs && lite-server",
+    "publish": "cds src && npm publish --access public",
+    "deploy": "firebase deploy --only hosting:blueprintui-cli"
   },
   "author": "Cory Rylan",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "^0.6.2",
+    "@custom-elements-manifest/analyzer": "^0.6.3",
     "@lit/ts-transformers": "^1.1.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.3.2",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@rollup/plugin-virtual": "^2.1.0",
     "@skypack/package-check": "^0.2.2",
     "acorn-import-assertions": "^1.8.0",
-    "commander": "^9.2.0",
+    "commander": "^9.3.0",
     "csso": "^5.0.3",
-    "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "path": "^0.12.7",
-    "rollup": "^2.74.1",
+    "rollup": "^2.75.7",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-import-assert": "^2.1.0",
     "rollup-plugin-minify-html-literals": "^1.2.6",
-    "rollup-plugin-shell": "^1.0.3",
+    "rollup-plugin-shell": "^1.0.6",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "2.3.1",
-    "typescript": "4.6.4",
-    "zx": "^7.0.0"
+    "tslib": "2.4.0",
+    "typescript": "^4.7.4",
+    "zx": "^7.0.2"
   }
 }
