--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -12,22 +12,22 @@
     "publish": "npm publish --access public",
     "deploy": "firebase deploy --only hosting:blueprintui-cli"
   },
-  "author": "Cory Rylan",
+  "author": "Crylan Software",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.6.3",
+    "@custom-elements-manifest/analyzer": "0.6.4",
     "@lit/ts-transformers": "1.1.3",
-    "@rollup/plugin-node-resolve": "13.3.0",
+    "@rollup/plugin-node-resolve": "14.1.0",
     "@rollup/plugin-replace": "4.0.0",
-    "@rollup/plugin-typescript": "8.3.4",
+    "@rollup/plugin-typescript": "8.5.0",
     "@rollup/plugin-virtual": "2.1.0",
     "@skypack/package-check": "0.2.2",
     "acorn-import-assertions": "1.8.0",
     "commander": "9.4.0",
-    "csso": "5.0.4",
+    "csso": "5.0.5",
     "glob": "8.0.3",
     "path": "0.12.7",
-    "rollup": "2.77.2",
+    "rollup": "2.79.0",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-import-assert": "2.1.0",
@@ -35,7 +35,7 @@
     "rollup-plugin-shell": "1.0.8",
     "rollup-plugin-terser": "7.0.2",
     "tslib": "2.4.0",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.3",
     "zx": "7.0.8"
   }
 }
