--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.0.12",
+  "version": "0.1.0",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -19,21 +19,20 @@
     "@lit/ts-transformers": "1.1.3",
     "@rollup/plugin-node-resolve": "15.0.0",
     "@rollup/plugin-replace": "5.0.0",
-    "@rollup/plugin-typescript": "8.5.0",
-    "@rollup/plugin-virtual": "2.1.0",
+    "@rollup/plugin-typescript": "9.0.1",
+    "@rollup/plugin-virtual": "3.0.0",
     "@skypack/package-check": "0.2.2",
     "acorn-import-assertions": "1.8.0",
     "commander": "9.4.1",
     "csso": "5.0.5",
     "glob": "8.0.3",
+    "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "2.79.1",
+    "rollup": "3.1.0",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-delete": "2.0.0",
-    "rollup-plugin-import-assert": "2.1.0",
-    "rollup-plugin-minify-html-literals": "1.2.6",
     "rollup-plugin-shell": "1.0.8",
-    "rollup-plugin-terser": "7.0.2",
+    "terser": "5.15.1",
     "tslib": "2.4.0",
     "typescript": "~4.7.4",
     "zx": "7.1.1"
