--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -17,24 +17,27 @@
   "dependencies": {
     "@custom-elements-manifest/analyzer": "0.6.4",
     "@lit/ts-transformers": "1.1.3",
-    "@rollup/plugin-node-resolve": "15.0.0",
-    "@rollup/plugin-replace": "5.0.0",
-    "@rollup/plugin-typescript": "9.0.1",
-    "@rollup/plugin-virtual": "3.0.0",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "5.0.2",
+    "@rollup/plugin-typescript": "11.0.0",
+    "@rollup/plugin-virtual": "3.0.1",
     "@skypack/package-check": "0.2.2",
     "acorn-import-assertions": "1.8.0",
-    "commander": "9.4.1",
+    "commander": "10.0.0",
     "csso": "5.0.5",
-    "glob": "8.0.3",
+    "glob": "8.1.0",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "3.1.0",
+    "rollup": "3.15.0",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-delete": "2.0.0",
-    "rollup-plugin-shell": "1.0.8",
-    "terser": "5.15.1",
-    "tslib": "2.4.0",
+    "rollup-plugin-shell": "1.0.9",
+    "terser": "5.16.3",
+    "tslib": "2.5.0",
     "typescript": "~4.7.4",
     "zx": "7.1.1"
+  },
+  "devDependencies": {
+    "lite-server": "^2.6.1"
   }
 }
