--- a/src/project/package.json
+++ b/src/project/package.json
@@ -37,7 +37,7 @@
     "lit": "^2.2.5"
   },
   "devDependencies": {
-    "@blueprintui/cli": "^0.0.5",
-    "typescript": "^4.6.4"
+    "@blueprintui/cli": "^0.1.0",
+    "typescript": "~4.7.4"
   }
 }
