--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -9,13 +9,12 @@
   "scripts": {
     "bp": "./src/index.mjs",
     "start": "cd docs && lite-server",
-    "publish": "npm publish --access public",
     "deploy": "firebase deploy --only hosting:blueprintui-cli"
   },
   "author": "Crylan Software",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.6.4",
+    "@custom-elements-manifest/analyzer": "0.6.9",
     "@lit/ts-transformers": "1.1.3",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-replace": "5.0.2",
@@ -25,17 +24,17 @@
     "acorn-import-assertions": "1.8.0",
     "commander": "10.0.0",
     "csso": "5.0.5",
-    "glob": "8.1.0",
+    "glob": "9.3.0",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "3.15.0",
+    "rollup": "3.19.1",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.16.3",
+    "terser": "5.16.6",
     "tslib": "2.5.0",
-    "typescript": "~4.7.4",
-    "zx": "7.1.1"
+    "typescript": "^4.7.4",
+    "zx": "7.2.0"
   },
   "devDependencies": {
     "lite-server": "^2.6.1"
