--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -14,7 +14,7 @@
   "author": "Crylan Software",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.6.9",
+    "@custom-elements-manifest/analyzer": "0.8.0",
     "@lit/ts-transformers": "1.1.3",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-replace": "5.0.2",
@@ -24,17 +24,17 @@
     "acorn-import-assertions": "1.8.0",
     "commander": "10.0.0",
     "csso": "5.0.5",
-    "glob": "9.3.0",
+    "glob": "9.3.2",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "3.19.1",
+    "rollup": "3.20.2",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.16.6",
+    "terser": "5.16.8",
     "tslib": "2.5.0",
-    "typescript": "^4.7.4",
-    "zx": "7.2.0"
+    "typescript": "~4.7.4",
+    "zx": "7.2.1"
   },
   "devDependencies": {
     "lite-server": "^2.6.1"
