--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.1.4",
+  "version": "0.2.1",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -14,29 +14,31 @@
   "author": "Crylan Software",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.8.0",
+    "@custom-elements-manifest/analyzer": "0.8.1",
     "@lit/ts-transformers": "1.1.3",
-    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-node-resolve": "15.0.2",
     "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-typescript": "11.0.0",
+    "@rollup/plugin-typescript": "11.1.0",
     "@rollup/plugin-virtual": "3.0.1",
     "@skypack/package-check": "0.2.2",
     "acorn-import-assertions": "1.8.0",
-    "commander": "10.0.0",
-    "csso": "5.0.5",
-    "glob": "9.3.2",
+    "browserslist": "4.21.5",
+    "commander": "10.0.1",
+    "lightningcss": "1.20.0",
+    "glob": "10.2.2",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "3.20.2",
+    "rollup": "3.21.5",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-delete": "2.0.0",
+    "rollup-plugin-import-assert": "3.0.1",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.16.8",
+    "terser": "5.17.1",
     "tslib": "2.5.0",
     "typescript": "~4.7.4",
-    "zx": "7.2.1"
+    "zx": "7.2.2"
   },
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "2.6.1"
   }
 }
