--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.4.0",
+  "version": "0.6.0",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -14,29 +14,30 @@
   "author": "Crylan Software",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.8.3",
+    "@custom-elements-manifest/analyzer": "0.8.4",
     "@lit/ts-transformers": "2.0.0-pre.1",
-    "@rollup/plugin-node-resolve": "15.2.1",
-    "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-typescript": "11.1.4",
-    "@rollup/plugin-virtual": "3.0.1",
+    "@rollup/plugin-node-resolve": "15.2.2",
+    "@rollup/plugin-replace": "5.0.3",
+    "@rollup/plugin-typescript": "11.1.5",
+    "@rollup/plugin-virtual": "3.0.2",
     "@skypack/package-check": "0.2.2",
+    "acorn-import-attributes": "1.9.2",
     "acorn-import-assertions": "1.9.0",
-    "browserslist": "4.21.9",
+    "browserslist": "4.22.1",
     "commander": "11.0.0",
-    "glob": "10.3.0",
-    "lightningcss": "1.21.0",
+    "glob": "10.3.10",
+    "lightningcss": "1.22.0",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "3.25.2",
-    "rollup-plugin-copy": "3.4.0",
+    "rollup": "3.29.3",
+    "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
-    "rollup-plugin-import-assert": "3.0.1",
+    "rollup-plugin-import-css": "^3.3.4",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.18.1",
+    "terser": "5.21.0",
     "tslib": "2.6.2",
     "typescript": "~5.2.2",
-    "zx": "7.2.2"
+    "zx": "7.2.3"
   },
   "devDependencies": {
     "lite-server": "2.6.1"
