--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@custom-elements-manifest/analyzer": "0.8.4",
-    "@lit/ts-transformers": "2.0.0-pre.1",
+    "@lit/ts-transformers": "2.0.0",
     "@rollup/plugin-node-resolve": "15.2.2",
     "@rollup/plugin-replace": "5.0.3",
     "@rollup/plugin-typescript": "11.1.5",
