--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -14,17 +14,17 @@
   "author": "Crylan Software",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.8.4",
+    "@custom-elements-manifest/analyzer": "0.9.0",
     "@lit/ts-transformers": "2.0.0",
-    "@rollup/plugin-node-resolve": "15.2.2",
-    "@rollup/plugin-replace": "5.0.3",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-replace": "5.0.5",
     "@rollup/plugin-typescript": "11.1.5",
     "@rollup/plugin-virtual": "3.0.2",
     "@skypack/package-check": "0.2.2",
     "acorn-import-attributes": "1.9.2",
     "acorn-import-assertions": "1.9.0",
     "browserslist": "4.22.1",
-    "commander": "11.0.0",
+    "commander": "11.1.0",
     "glob": "10.3.10",
     "lightningcss": "1.22.0",
     "minify-html-literals": "1.3.5",
@@ -32,9 +32,9 @@
     "rollup": "3.29.3",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
-    "rollup-plugin-import-css": "^3.3.4",
+    "rollup-plugin-import-css": "3.3.5",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.21.0",
+    "terser": "5.24.0",
     "tslib": "2.6.2",
     "typescript": "~5.2.2",
     "zx": "7.2.3"
