feat: add vscode metadata support
Signed-off-by: Cory Rylan <cory@coryrylan.com>

--- a/src/project/tsconfig.lib.json
+++ b/src/project/tsconfig.lib.json
@@ -6,7 +6,7 @@
     "isolatedModules": true,
     "useDefineForClassFields": true,
     "noEmit": true,
-    "tsBuildInfoFile": "./dist/lib/.tsbuildinfo"
+    "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "exclude": [
     "dist",
