--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "",
   "main": "./index.mjs",
   "bin": {
@@ -14,30 +14,29 @@
   "author": "Crylan Software",
   "license": "MIT",
   "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.10.2",
+    "@custom-elements-manifest/analyzer": "0.10.3",
     "@lit/ts-transformers": "2.0.1",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-replace": "5.0.7",
     "@rollup/plugin-typescript": "11.1.6",
     "@rollup/plugin-virtual": "3.0.2",
     "@skypack/package-check": "0.2.2",
-    "acorn-import-attributes": "1.9.5",
-    "acorn-import-assertions": "1.9.0",
-    "browserslist": "4.23.1",
+    "browserslist": "4.23.2",
     "commander": "12.1.0",
+    "custom-element-vs-code-integration": "1.4.1",
     "glob": "10.4.1",
     "lightningcss": "1.25.1",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "4.18.0",
+    "rollup": "4.19.0",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-css-modules": "0.1.2",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.31.1",
+    "terser": "5.31.3",
     "tslib": "2.6.3",
-    "typescript": "~5.5.2",
-    "zx": "8.1.2"
+    "typescript": "~5.5.4",
+    "zx": "8.1.4"
   },
   "devDependencies": {
     "lite-server": "2.6.1"
