--- a/src/project/tsconfig.json
+++ b/src/project/tsconfig.json
@@ -8,7 +8,7 @@
     "useDefineForClassFields": false,
     "allowSyntheticDefaultImports": false,
     "resolveJsonModule": true,
-    "outDir": "./dist/lib",
+    "outDir": "./dist",
     "declaration": true,
     "types": ["jasmine"],
     "alwaysStrict": true,
