--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "",
   "main": "./index.mjs",
   "bin": {
     "bp": "./src/index.mjs"
+  },
+  "packageManager": "pnpm@9.9.0",
+  "engines": {
+    "node": "22.8.0"
   },
   "scripts": {
     "bp": "./src/index.mjs",
@@ -20,7 +24,7 @@
     "@rollup/plugin-replace": "5.0.7",
     "@rollup/plugin-typescript": "11.1.6",
     "@rollup/plugin-virtual": "3.0.2",
-    "@skypack/package-check": "0.2.2",
+    "@rollup/pluginutils": "5.1.0",
     "browserslist": "4.23.2",
     "commander": "12.1.0",
     "custom-element-vs-code-integration": "1.4.1",
@@ -28,15 +32,16 @@
     "lightningcss": "1.25.1",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
-    "rollup": "4.19.0",
+    "publint": "0.2.10",
+    "rollup": "4.21.3",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-css-modules": "0.1.2",
-    "rollup-plugin-delete": "2.0.0",
+    "rollup-plugin-delete": "2.1.0",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.31.3",
-    "tslib": "2.6.3",
-    "typescript": "~5.5.4",
-    "zx": "8.1.4"
+    "terser": "5.32.0",
+    "tslib": "2.7.0",
+    "typescript": "~5.6.2",
+    "zx": "8.1.6"
   },
   "devDependencies": {
     "lite-server": "2.6.1"
