--- a/package.json
+++ b/package.json
@@ -1,47 +1,18 @@
 {
-  "name": "@blueprintui/cli",
+  "name": "@blueprintui/monorepo",
   "version": "0.11.0",
-  "description": "",
-  "main": "./index.mjs",
-  "bin": {
-    "bp": "./src/index.mjs"
-  },
-  "packageManager": "pnpm@9.12.13",
+  "private": true,
+  "type": "module",
   "engines": {
-    "node": "22.11.0"
+    "node": "22.15.1"
   },
+  "packageManager": "pnpm@10.11.0",
   "scripts": {
-    "bp": "./src/index.mjs",
+    "build": "pnpm -r build",
+    "build:watch": "pnpm -r build:watch",
+    "clean": "git clean -dfX",
     "start": "cd docs && lite-server",
     "deploy": "firebase deploy --only hosting:blueprintui-cli"
-  },
-  "author": "Crylan Software",
-  "license": "MIT",
-  "dependencies": {
-    "@custom-elements-manifest/analyzer": "0.10.3",
-    "@lit/ts-transformers": "2.0.1",
-    "@rollup/plugin-node-resolve": "15.3.0",
-    "@rollup/plugin-replace": "6.0.1",
-    "@rollup/plugin-typescript": "12.1.1",
-    "@rollup/plugin-virtual": "3.0.2",
-    "@rollup/pluginutils": "5.1.3",
-    "browserslist": "4.24.2",
-    "commander": "12.1.0",
-    "custom-element-vs-code-integration": "1.4.1",
-    "glob": "11.0.0",
-    "lightningcss": "1.28.1",
-    "minify-html-literals": "1.3.5",
-    "path": "0.12.7",
-    "publint": "0.2.12",
-    "rollup": "4.25.0",
-    "rollup-plugin-copy": "3.5.0",
-    "rollup-plugin-css-modules": "0.1.2",
-    "rollup-plugin-delete": "2.1.0",
-    "rollup-plugin-shell": "1.0.9",
-    "terser": "5.36.0",
-    "tslib": "2.8.1",
-    "typescript": "~5.6.3",
-    "zx": "8.2.1"
   },
   "devDependencies": {
     "lite-server": "2.6.1"
