--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.11.1",
+  "version": "0.11.2",
   "type": "module",
   "main": "./src/index.mjs",
   "bin": {
     "bp": "./src/index.mjs"
   },
+  "files": [
+    "src",
+    "CHANGELOG.md",
+    "package.json"
+  ],
   "scripts": {
     "build": "echo 'No build needed for CLI'"
   },
