--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.11.2",
+  "version": "0.11.3",
   "type": "module",
   "main": "./src/index.mjs",
   "bin": {
@@ -9,36 +9,38 @@
   "files": [
     "src",
     "CHANGELOG.md",
+    "LICENSE.md",
     "package.json"
   ],
   "scripts": {
-    "build": "echo 'No build needed for CLI'"
+    "build": "echo 'No build needed for CLI'",
+    "deploy": "pnpm publish --access public"
   },
   "dependencies": {
     "@custom-elements-manifest/analyzer": "0.10.4",
     "@lit/ts-transformers": "2.0.2",
-    "@rollup/plugin-node-resolve": "15.3.0",
+    "@rollup/plugin-node-resolve": "16.0.1",
     "@rollup/plugin-replace": "6.0.2",
-    "@rollup/plugin-typescript": "12.1.2",
+    "@rollup/plugin-typescript": "12.1.4",
     "@rollup/plugin-virtual": "3.0.2",
-    "@rollup/pluginutils": "5.1.4",
-    "browserslist": "4.24.5",
-    "commander": "12.1.0",
+    "@rollup/pluginutils": "5.2.0",
+    "browserslist": "4.25.2",
+    "commander": "14.0.0",
     "custom-element-vs-code-integration": "1.5.0",
-    "glob": "11.0.2",
+    "glob": "11.0.3",
     "lightningcss": "1.30.1",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
     "publint": "0.3.12",
-    "rollup": "4.41.1",
+    "rollup": "4.46.2",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-css-modules": "0.1.2",
-    "rollup-plugin-delete": "2.1.0",
+    "rollup-plugin-delete": "3.0.1",
     "rollup-plugin-shell": "1.0.9",
-    "terser": "5.39.2",
+    "terser": "5.43.1",
     "tslib": "2.8.1",
-    "typescript": "~5.8.3",
-    "zx": "8.5.3"
+    "typescript": "~5.9.2",
+    "zx": "8.8.0"
   },
   "engines": {
     "node": "22.15.1"
