--- a/projects/example/package.json
+++ b/projects/example/package.json
@@ -45,12 +45,12 @@
     "url": "git+https://github.com/blueprintui/cli.git"
   },
   "dependencies": {
-    "lit": "^3.3.0"
+    "lit": "^3.3.1"
   },
   "devDependencies": {
     "@blueprintui/cli": "workspace:*",
     "serve": "14.2.4",
-    "tslib": "~2.8.1",
-    "typescript": "~5.8.3"
+    "tslib": "2.8.1",
+    "typescript": "5.9.2"
   }
 }
