feat: upgrade typescript 6.0
Signed-off-by: Cory Rylan <cory@coryrylan.com>

--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   },
   "pnpm": {
     "peerDependencyRules": {
-      "ignoreMissing": ["rollup"]
-    }
+      "ignoreMissing": [
+        "rollup"
+      ]
+    },
+    "onlyBuiltDependencies": [
+      "rs-module-lexer"
+    ]
   }
 }
