--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueprintui/cli",
-  "version": "0.11.4",
+  "version": "0.12.0",
   "type": "module",
   "main": "./src/index.mjs",
   "bin": {
@@ -27,15 +27,15 @@
     "browserslist": "4.28.1",
     "commander": "14.0.3",
     "custom-element-vs-code-integration": "1.5.0",
-    "glob": "13.0.1",
+    "glob": "13.0.3",
     "lightningcss": "1.31.1",
     "minify-html-literals": "1.3.5",
     "path": "0.12.7",
     "publint": "0.3.17",
-    "rolldown": "1.0.0-rc.3",
+    "rolldown": "1.0.0-rc.4",
     "terser": "5.46.0",
     "tslib": "2.8.1",
-    "typescript": "~5.9.3",
+    "typescript": "6.0.0-beta",
     "zx": "8.8.5"
   }
 }
