--- a/projects/cli/src/project/package.json
+++ b/projects/cli/src/project/package.json
@@ -51,6 +51,6 @@
     "@blueprintui/cli": "^0.11.0",
     "serve": "14.2.4",
     "tslib": "~2.8.1",
-    "typescript": "~5.8.3"
+    "typescript": "6.0.0-beta"
   }
 }
