--- a/projects/example/package.json
+++ b/projects/example/package.json
@@ -55,6 +55,6 @@
     "@typescript/lib-dom": "npm:@types/web@^0.0.328",
     "serve": "14.2.5",
     "tslib": "2.8.1",
-    "typescript": "5.9.3"
+    "typescript": "6.0.0-beta"
   }
 }
