--- a/projects/example/tsconfig.json
+++ b/projects/example/tsconfig.json
@@ -2,11 +2,10 @@
   "compilerOptions": {
     "target": "es2022",
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "lib": ["esnext", "dom"],
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
-    "allowSyntheticDefaultImports": false,
     "resolveJsonModule": true,
     "outDir": "./dist",
     "declaration": true,
@@ -22,7 +21,6 @@
     "sourceMap": false,
     "inlineSourceMap": false,
     "importHelpers": true,
-    "baseUrl": "./",
     "rootDir": "./src"
   },
   "exclude": ["dist", "node_modules"]
